src/styles/code.css
.astro-code {
  background-color: var(--paper-deep);
}

:is(.astro-code, .astro-code span) {
  color: var(--shiki-light);
  font-style: var(--shiki-light-font-style);
  font-weight: var(--shiki-light-font-weight);
  text-decoration: var(--shiki-light-text-decoration);
}

@media (prefers-color-scheme: dark) {
  :is(.astro-code, .astro-code span) {
    color: var(--shiki-dark);
    font-style: var(--shiki-dark-font-style);
    font-weight: var(--shiki-dark-font-weight);
    text-decoration: var(--shiki-dark-text-decoration);
  }
}

